chore: revamp RCA reports endpoints
